mudanca arquivo de configuracao inicial

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -16,7 +16,7 @@
 @fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
-@import "fontawesome";
+//@import "fontawesome";
 
 // Glyphicons
 //@import "twitter/bootstrap/sprites.less";
